  - Increased the amount of oil added to the states in the USA decision "Open Public Lands for Fracking" from 2 to 6
  - Increased the gain for the trade autonomy decision from -0.08 to -0.12
  - Reduced the time to execute the USA decision "Execute Operation Enduring Freedom (OEF)" from 30 to 15 days
  - Increased the cost of MBTs in the international market from 0.022 to 0.032

 Bugfix:
  - Bulgarian & Serbian arms deal has been removed and replaced with a international market income modifier of 20%
  - West Side Boys name change to be accurate name
  - Fixed the Italian focus "Relinquish Power to the Pope" not properly transferring subjects to the Holy See
  - Fixed being able to send yourself "Bailouts" if you have somehow become an influencer of yourself
  - Fixed the Nigerian mission "Religious Civil War" not properly concluding when you have converted everything
  - Fixed the Brazilian achievement "The New Communist South America" not properly triggering due to a mistake in the alignment check
  - Fixed the Fijian AI Behavior not properly setting the global flag for either game rule
  - Fixed the Somali Civil War global flags not being properly set for it's conclusion
  - Fixed the USA decision "Open Public Lands for Fracking" adding oil to the wrong state
  - Fixed the Sudanese Ribbon "End the Second Sudanese Civil War" not properly triggering due to a bug in what flag was triggered
  - Fixed the combat tactics for random different combat tactics not properly being set
  - Fixed Georges Leygues Class destroyer definition in OOB MTG (from "frigate" to "destroyer")
  - Fix the Indian focus "Brazilian Industrial Partnership" not properly giving influence to Brazil
  - Fixed German Focus Tighten Borders decreasing migration law instead of increasing it
  - Fixed the country flag decisions not showing up properly as well as optimized their checks
  - Fixed the APC/IFVs not properly being added to the division template after researching specific techs