@@ -43,6 +43,7 @@ ideas = {
 				migration_rate_value_factor = -0.15
 				minimum_terror_threat_modifier = 20
 				minimum_radicalization_modifier = 20
+				literacy_rate_education_modifier = -0.06
 			}
 
 			cancel_if_invalid = no
@@ -99,6 +100,7 @@ ideas = {
 				migration_rate_value_factor = -0.12
 				minimum_terror_threat_modifier = 15
 				minimum_radicalization_modifier = 15
+				literacy_rate_education_modifier = -0.04
 			}
 
 			cancel_if_invalid = no
@@ -156,6 +158,7 @@ ideas = {
 				migration_rate_value_factor = -0.10
 				minimum_terror_threat_modifier = 10
 				minimum_radicalization_modifier = 10
+				literacy_rate_education_modifier = -0.02
 			}
 
 			cancel_if_invalid = no
