@@ -1319,6 +1319,7 @@ ideas = {
 
 			modifier = {
 				research_speed_factor = 0.02
+				literacy_rate_education_modifier = 0.02
 			}
 
 			cancel_if_invalid = no
@@ -1449,7 +1450,7 @@ ideas = {
 				stability_factor = 0.01
 				foreign_influence_modifier = 0.05
 				productivity_growth_modifier = 0.04
-				literacy_rate_education_modifier = 0.02
+				literacy_rate_education_modifier = 0.04
 			}
 
 			cancel_if_invalid = no
@@ -1575,7 +1576,7 @@ ideas = {
 				stability_factor = 0.02
 				foreign_influence_modifier = 0.10
 				productivity_growth_modifier = 0.08
-				literacy_rate_education_modifier = 0.04
+				literacy_rate_education_modifier = 0.06
 			}
 
 			cancel_if_invalid = no
@@ -1677,7 +1678,7 @@ ideas = {
 				stability_factor = 0.03
 				foreign_influence_modifier = 0.15
 				productivity_growth_modifier = 0.12
-				literacy_rate_education_modifier = 0.06
+				literacy_rate_education_modifier = 0.08
 			}
 
 			cancel_if_invalid = no
@@ -1810,7 +1811,7 @@ ideas = {
 				stability_factor = 0.05
 				foreign_influence_modifier = 0.20
 				productivity_growth_modifier = 0.16
-				literacy_rate_education_modifier = 0.08
+				literacy_rate_education_modifier = 0.10
 			}
 
 			cancel_if_invalid = no
