@@ -142,7 +142,7 @@ focus_tree = {
 			set_temp_variable = { temp_modify_social_con_government = 5 }
 			modify_social_conservatism_government = yes
 			hidden_effect = {
-				random_country = {
+				random_other_country = {
 					limit = {
 						OR = {
 							has_idea = sunni
