@@ -191,12 +191,8 @@ EDU_learn_to_annex_your_neighbours = {
 	else = { # WITHOUT CIVIL WAR CONDITIONALS
 		if = {
 			limit = {
-				ROOT = {
-					has_variable = literacy_rate
-				}
-				FROM = {
-					has_variable = literacy_rate
-				}
+				ROOT = { has_variable = literacy_rate }
+				FROM = { has_variable = literacy_rate }
 			}
 			EDU_annexation_math_education = yes
 		}
@@ -279,12 +275,16 @@ EDU_update_education_idea_DYNMOD = {
 }
 
 EDU_check_education_spending = {
+	set_temp_variable = { LR_change_minimum = -0.05 }
+	set_temp_variable = { LR_change_maximum = 0 }
+
+	add_to_temp_variable = { LR_change_minimum = modifier@literacy_rate_education_modifier }
 	set_temp_variable = { LR_change_maximum = modifier@literacy_rate_education_modifier }
 
 	randomize_temp_variable = {
 		var = LR_change
 		distribution = uniform
-		min = -0.05
+		min = LR_change_minimum
 		max = LR_change_maximum
 	}
 
